--- a/Web/TeleConsult.Web/Web.config
+++ b/Web/TeleConsult.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TeleConsultDb" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=TeleConsultDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="TeleConsultDb" connectionString="Server=tcp:teleconsult.database.windows.net,1433;Database=TeleConsultDb;User ID=penjurov@teleconsult;Password=Pass1234;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
